--- a/src/sidebar/Sidebar.css
+++ b/src/sidebar/Sidebar.css
@@ -1,3 +1,7 @@
 .sideBar {
     padding: 10px;
 }
+
+.sideBar img {
+    width: 100%;
+}
